Styling on footer and trying to fix spacing in the sections and header.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,8 +79,5 @@ h2 {
       h1 {
         font-size: 5rem;
       }
-    
-      nav a {
-        margin-left: 4rem;
-    }
+
   }
